Revision history for {{$dist->name}}

{{$NEXT}}

0.500     2018-12-23 20:14:10-08:00 America/Los_Angeles
  - Renamed this class as Text::Parser after RT#127067 by James Keenan
  - Added the ability to parse text from filehandles, thus the name Text::Parser and not Text::File::Parser
  - Added new method filehandle just to provide interface similar to filename.
  - Indicated in POD that Text::Parser supersedes TextFileParser.

0.204     2018-08-08 20:37:32-07:00 America/Los_Angeles
  - Removed use of indirect method notation in POD

0.203     2018-08-08 17:43:11-07:00 America/Los_Angeles
  - Clearer documentation

0.202     2018-08-08 00:03:52-07:00 America/Los_Angeles
  - Added bugtracking info to POD

0.201     2018-08-07 23:19:45-07:00 America/Los_Angeles
  - Improved documentation
  - Removed the use Role::Tiny from the tests

0.200     2018-08-07 16:31:53-07:00 America/Los_Angeles
  - Changed versioning scheme
  - Updated documentation

0.1821907 2018-08-07 14:37:11-07:00 America/Los_Angeles
  - Removed record_list_pointer method
  - Updated documentation
  - Added tests using a Role::Tiny

0.1821905 2018-08-07 09:22:12-07:00 America/Los_Angeles
  - Added a new method pop_record
  - Updated POD and simplified examples
  - Added more tests

0.1821902 2018-08-06 23:33:10-07:00 America/Los_Angeles
  - Added the first tests
  - Removed method make_sense_of_line. Derived classes override only save_record
  - Updated documentation briefly.

0.1821900 2018-08-06 20:41:42-07:00 America/Los_Angeles
  - Put your comment here